ingress/dashboard.test.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard-test 
  namespace: kube-system 
  annotations: 
    ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
  - host: dash.gmt.me
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-dashboard 
          servicePort: 443
