ingress/ingress-default.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: https-ingress
  annotations: 
    ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
  - host: my.harbor.me
    http:
      paths:
      - path: /
        backend:
          serviceName: harbor 
          servicePort: 443
